apps/base/mockery/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mockery-svc
  labels:
    app: mockery
    release: mockery
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: mockery
    release: mockery-mockery
