apps/base/mockery/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mockery-route
  labels:
    app: mockery
spec:
  parentRefs:
    - name: gateway-api
      namespace: istio-ingress
  hostnames:
    - "mockery.local.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: mockery
          namespace: mockery
          port: 80
